--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 It is built on a W3C site tutorial so does not claim to be flash, but now has an image, [of a paper we wrote a while back on CSED4G (Computing Education for the Social Good)]</p>
 <p>The site is not particularly well presented, but as the site uses HTML and has been styled with CSS it can be regarded as a <em>"minimum viable product"</em> for the purposes of this project&hellip;
 It has some default links, which you can take as a start for your site structure.  The <em>Process Support </em>Links provides guidance which will be needed for presenting your final project. </p>
-
+<p>We are a team of only two members so we can’t have too many roles. Therefore, we needed an effective role allocation that two people could handle.Our strengths were different so we decided on our roles accordingly.</p>
+<p>Jeri: research on AI and education/learning, writing on the website</p>
+<p>Daniel: interview with educators, collect opinions of experts on AI/education </p>
 
 <!-- Sign and date the page, it's only polite! -->
 <address>Made 17 May 2023<br>
