--- a/index.html
+++ b/index.html
@@ -22,11 +22,15 @@
 <!-- Main content -->
 <h1>Exploring the role of AI in Transforming Education</h1>
 
+<h2>Why is this important?</h2>
 
-</ul><p>This mock-up site is intended to support your team project so you can take this as a set of files and as a starting point and adapt it to your preference. 
-It is built on a W3C site tutorial so does not claim to be flash, but now has an image, [of a paper we wrote a while back on CSED4G (Computing Education for the Social Good)]</p>
-<p>The site is not particularly well presented, but as the site uses HTML and has been styled with CSS it can be regarded as a <em>"minimum viable product"</em> for the purposes of this project&hellip;
-It has some default links, which you can take as a start for your site structure.  The <em>Process Support </em>Links provides guidance which will be needed for presenting your final project. </p>
+</ul><p>Now that remote teaching has become ubiquitous across many countries, AI will play key roles in revolutionizing what it means 'to learn' moving forward. </p>
+<p>As artificial intelligence (AI) continues its rapid evolution, its having notable effects on education - enabling unique learning experiences and automating administrative tasks such as grading, plagiarism detection amongst many others. However there remain untapped potentials with regards to how best to harness this technology in classrooms for optimal student outcomes.
+We will research the opportunities, risks and ethical concerns of AI regarding education and learning.</p>
+
+<h2>Why did we choose this topic?</h2>
+
+<p>As aspiring computer scientists passionate about innovation with positive social impact at our core; understanding how best to implement evolving technological solutions such as those that employ Artificial Intelligence(AI) will be important as digitalization increasingly permeates various aspects of life.</p>
 <p>We are a team of only two members so we can’t have too many roles. Therefore, we needed an effective role allocation that two people could handle.Our strengths were different so we decided on our roles accordingly.</p>
 <p>Jeri: research on AI and education/learning, writing on the website</p>
 <p>Daniel: interview with educators, collect opinions of experts on AI/education </p>
