--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@ We will research the opportunities, risks and ethical concerns of AI regarding e
 <h2>Why did we choose this topic?</h2>
 
 <p>As aspiring computer scientists passionate about innovation with positive social impact at our core; understanding how best to implement evolving technological solutions such as those that employ Artificial Intelligence(AI) will be important as digitalization increasingly permeates various aspects of life.</p>
+
+<h2>Team Roles</h2>
+
 <p>We are a team of only two members so we can’t have too many roles. Therefore, we needed an effective role allocation that two people could handle.Our strengths were different so we decided on our roles accordingly.</p>
 <p>Jeri: research on AI and education/learning, writing on the website</p>
 <p>Daniel: interview with educators, collect opinions of experts on AI/education </p>
