--- a/misc/opportunities.html
+++ b/misc/opportunities.html
@@ -24,7 +24,15 @@
 <h1>Technology Opportunities</h1>
 
 
-</ul><h4><p>The page or area describing the opportunities presented by your chosen technology/topic.<p></h4>
+</ul><h4><p>Artificial Intelligence (AI) has opened up many ways to enhance student education. Some of the opportunities include but are not limited to:
+Personalized learning paths: based on each student’s strengths/weaknesses/learning style, AI targets areas where students need support.
+Intelligent tutoring: using real_time feedback to identify where AI detects  where a student is struggling and offers assistance to problem areas leading to better marks.
+Adaptive assessments: AI quickly adapts to each student’s performance and presents valuable insights for teachers, allowing them to adjust teaching strategies in order to provide clearer understandings of topics.
+Enhanced Content Creation: AI algorithms can generate educational content such as quizzes, practice exercises and lesson plans. This saves educators time and effort, allowing them to focus on more interactive and engaging teaching activities.
+Accessibility and Inclusivity: AI can support learners with disabilities through the use of speech recognition, text-to-speech and image recognition. This reflects a commitment towards inclusivity and equality among all learners.
+Administrative Support: AI systems can streamline administrative tasks, such as grading assignments, scheduling, and record-keeping, freeing up time for educators to focus on teaching and providing individualized support to students.
+All of these opportunities contribute to providing an enhanced teaching and learning experience for society, but what are the downsides?
+<p></h4>
 
 <!-- Sign and date the page, it's only polite! -->
 <address>Made 1 March 2021<br>
