--- a/misc/opportunities.html
+++ b/misc/opportunities.html
@@ -27,6 +27,8 @@
 <h4><p>Artificial Intelligence (AI) has opened up many ways to enhance student education. Some of the opportunities include but are not limited to:</h4>
 	
 <h4>&bull;  Personalized learning paths: based on each student’s strengths/weaknesses/learning style, AI targets areas where students need support.</h4>
+<h4>“Recently, The University of Murcia in Spain began testing an AI-enabled chatbot to answer students’ questions about the campus and areas of study. As this chatbot was rolled out, the school’s administrators were surprised to discover that it was able to answer more than 38,708 questions, answering correctly more than 91% of the time.”</h4> 
+<h4>(How AI and Data Could Personalize Higher Education, 2019)</h4>
 <h4>&bull;  Intelligent tutoring: using real_time feedback to identify where AI detects  where a student is struggling and offers assistance to problem areas leading to better marks.</h4>
 <h4>&bull;  Adaptive assessments: AI quickly adapts to each student’s performance and presents valuable insights for teachers, allowing them to adjust teaching strategies in order to provide clearer understandings of topics.</h4>
 <h4>&bull;  Enhanced Content Creation: AI algorithms can generate educational content such as quizzes, practice exercises and lesson plans. This saves educators time and effort, allowing them to focus on more interactive and engaging teaching activities.</h4>
