--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html>
 <head>
-  <title>My first styled page</title>
+  <title>Exploring the role of AI in Transforming Education</title>
   	<link rel="stylesheet" href="styles/mystyles.css">
   </head>
 
@@ -24,7 +24,7 @@
 
 <h2>Why is this important?</h2>
 
-</ul><p>Now that remote teaching has become ubiquitous across many countries, AI will play key roles in revolutionizing what it means 'to learn' moving forward. </p>
+</ul><p>Now that learning and teaching on computers has become ubiquitous across many countries, AI will play key roles in revolutionizing what it means 'to learn' moving forward. </p>
 <p>As artificial intelligence (AI) continues its rapid evolution, its having notable effects on education - enabling unique learning experiences and automating administrative tasks such as grading, plagiarism detection amongst many others. However there remain untapped potentials with regards to how best to harness this technology in classrooms for optimal student outcomes.
 We will research the opportunities, risks and ethical concerns of AI regarding education and learning.</p>
 
