--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
 
 <body>
-<img src="images/chatgpticon.png" alt="Enhancing Social Good in Computing">
+<img src="images/chatgpticon_40.png" alt="Enhancing Social Good in Computing">
 <!-- Site navigation menu -->
 <ul class="navbar">
   <li><a href="index.html">Home page</a>
@@ -34,9 +34,10 @@ We will research the opportunities, risks and ethical concerns of AI regarding e
 
 <h2>Team Roles</h2>
 
-<p>We are a team of only two members so we can’t have too many roles. Therefore, we needed an effective role allocation that two people could handle.Our strengths were different so we decided on our roles accordingly.</p>
-<p>Jeri: research on AI and education/learning, writing on the website</p>
-<p>Daniel: interview with educators, collect opinions of experts on AI/education </p>
+<p>We are a team of only two members so we can’t have too many roles. Therefore, we needed an effective role allocation that two people could handle. Our strengths were different so we decided on our roles accordingly.</p>
+<p>Jeri: designing the website, citations and referencing</p>
+<p>Daniel: writing on the website, designing presentation slides</p>
+<p>We both collaborate on researching the topic of AI in education and writing on the final presentation.</p>
 
 <!-- Sign and date the page, it's only polite! -->
 <address>Made 17 May 2023<br>
