--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
 
 <body>
-<img src="images/chatgpticon_40.png" alt="Enhancing Social Good in Computing">
+<img src="images/chatgpticon_40.png" alt="AI in Education">
 <!-- Site navigation menu -->
 <ul class="navbar">
   <li><a href="index.html">Home page</a>
@@ -16,7 +16,6 @@
 	<li><a href="misc/choices.html">Choices</a>
 	<li><a href="misc/ethics.html">Ethical Reflections</a>
 	<li><a href="misc/references.html">References</a>
-   <li><a href="misc/process.html">Process Support</a>
 </ul>
 
 <!-- Main content -->
