--- a/misc/choices.html
+++ b/misc/choices.html
@@ -24,18 +24,18 @@
 <h1>Technology Choices</h1>
 
 
-<h4>It is crucial to evaluate the choices available before adopting AI technology or thinking about its applications. Here are critical assessment of some key points to consider:</h4>
-<h4>&bull;Benefits vs. Risks</h4>
-<h4>Although AI offers various advantages such as automation, efficiency, and data analysis ability, it is necessary to consider whether using AI for education is more risky than the benefits because there are risks such as privacy issues, biased decisions, overreliance on technology, and AI misinformation. Is an enhanced learning experience worth the risk of data privacy?</h4>
-<h4>&bull;Teacher-student relationship</h4>
-<h4>Although AI can improve learning, it shouldn't take the place of teachers or human interaction in the classroom. The decisions made when implementing AI should put maintaining the teacher-student relationship first and make sure that AI serves as a supportive tool rather than a replacement for human direction.</h4>
-<h4>Because AI can sometimes produce unequal outcomes for students and it can also lead to a decrease in the sense of connection with humans, as there is no interaction with teachers.</h4>
+<p>It is crucial to evaluate the choices available before adopting AI technology or thinking about its applications. Here are critical assessment of some key points to consider:</p>
+<p>&bull;Benefits vs. Risks</p>
+<p>Although AI offers various advantages such as automation, efficiency, and data analysis ability, it is necessary to consider whether using AI for education is more risky than the benefits because there are risks such as privacy issues, biased decisions, overreliance on technology, and AI misinformation. Is an enhanced learning experience worth the risk of data privacy?</p>
+<p>&bull;Teacher-student relationship</p>
+<p>Although AI can improve learning, it shouldn't take the place of teachers or human interaction in the classroom. The decisions made when implementing AI should put maintaining the teacher-student relationship first and make sure that AI serves as a supportive tool rather than a replacement for human direction.</p>
+<p>Because AI can sometimes produce unequal outcomes for students and it can also lead to a decrease in the sense of connection with humans, as there is no interaction with teachers.</p>
 
 
 
 <!-- Sign and date the page, it's only polite! -->
-<address>Made 1 March 2021<br>
-  by Tony Clear.</address>
+<address>Made 31 May 2023<br>
+  by Daniel Kim and Jeri Camacho.</address>
  
 <p><em>thanks to W3C for tutorial and adapted code from <a href="https://www.w3.org/Style/Examples/011/firstcss.en.html">Style Examples</a></p></em>
 <p><em>also thanks to WDN for HTML and CSS resources and any adapted code snippets from <a href= "https://developer.mozilla.org/en-US/docs/Web">Mozilla Developer Network</a></p></em 
