--- a/misc/risks.html
+++ b/misc/risks.html
@@ -24,25 +24,25 @@
 <h1>Technology Risks</h1>
 
 
-<h4>These days, as AI develops and is used a lot, many students are using AI chatbots like ChatGPT as an assistant to their work. This poses a lot of risks to education. The risks include:</h4>
-<h4>&bull;  Privacy Issues</h4>
-<h4>   Data privacy risks in AI implementation can impact the trust and acceptance of AI in education. Concerns about the misuse or unauthorized access of student and educator data can create hesitancy in adopting AI-powered educational technologies.</h4>
-<h4>   The potential for data breaches or mishandling of personally identifiable information (PII) can lead to legal and ethical implications. Education leaders must ensure that AI vendors explicitly commit to never selling or sharing PII data for marketing or commercial purposes.</h4>
-<h4>&bull;  Overreliance on Technology</h4>
-<h4>   As a student, you have to develop, and learn more, but if you lean too much on AI, you will lack creativity and innovation.</h4>
-<h4>   Also student will lose the ability of problem-solving and thinking critically when faced with unexpected situations such as things that AI can’t do or not programmed to do.</h4>
-<h4>&bull;  Artificial intelligence misinformation</h4>
-<h4>   AI grows on the basis of information entered by people, but it can provide us with false information because it cannot judge true and false information.</h4>
-<h4>   So students should be able to avoid being misled by false information.</h4>
-<h4>&bull;  Bias and Discrimination</h4>
-<h4>   Since it is humans who make artificial intelligence and learn from human-written writings, there is almost no artificial intelligence without bias and discrimination.</h4>
-<h4>   This can result in unfair treatment or disadvantage for certain groups of students.</h4>
-<h4>   Therefore, students need to be careful while thinking whether these information is correct.</h4>
+<p>These days, as AI develops and is used a lot, many students are using AI chatbots like ChatGPT as an assistant to their work. This poses a lot of risks to education. The risks include:</p>
+<p>&bull;  Privacy Issues</p>
+<p>   Data privacy risks in AI implementation can impact the trust and acceptance of AI in education. Concerns about the misuse or unauthorized access of student and educator data can create hesitancy in adopting AI-powered educational technologies.</p>
+<p>   The potential for data breaches or mishandling of personally identifiable information (PII) can lead to legal and ethical implications. Education leaders must ensure that AI vendors explicitly commit to never selling or sharing PII data for marketing or commercial purposes.</p>
+<p>&bull;  Overreliance on Technology</p>
+<p>   As a student, you have to develop, and learn more, but if you lean too much on AI, you will lack creativity and innovation.</p>
+<p>   Also student will lose the ability of problem-solving and thinking critically when faced with unexpected situations such as things that AI can’t do or not programmed to do.</p>
+<p>&bull;  Artificial intelligence misinformation</p>
+<p>   AI grows on the basis of information entered by people, but it can provide us with false information because it cannot judge true and false information.</p>
+<p>   So students should be able to avoid being misled by false information.</p>
+<p>&bull;  Bias and Discrimination</p>
+<p>   Since it is humans who make artificial intelligence and learn from human-written writings, there is almost no artificial intelligence without bias and discrimination.</p>
+<p>   This can result in unfair treatment or disadvantage for certain groups of students.</p>
+<p>   Therefore, students need to be careful while thinking whether these information is correct.</p>
 
 
 <!-- Sign and date the page, it's only polite! -->
-<address>Made 1 March 2021<br>
-  by Tony Clear.</address>
+<address>Made 31 May 2023<br>
+  by Daniel Kim and Jeri Camacho.</address>
  
 <p><em>thanks to W3C for tutorial and adapted code from <a href="https://www.w3.org/Style/Examples/011/firstcss.en.html">Style Examples</a></p></em>
 <p><em>also thanks to WDN for HTML and CSS resources and any adapted code snippets from <a href= "https://developer.mozilla.org/en-US/docs/Web">Mozilla Developer Network</a></p></em 
