--- a/misc/opportunities.html
+++ b/misc/opportunities.html
@@ -26,15 +26,14 @@
 
 <h4><p>Artificial Intelligence (AI) has opened up many ways to enhance student education. Some of the opportunities include but are not limited to:</h4>
 	
-<h4>&bull;  Personalized learning paths: based on each student’s strengths/weaknesses/learning style, AI targets areas where students need support.</h4>
-<h4>“Recently, The University of Murcia in Spain began testing an AI-enabled chatbot to answer students’ questions about the campus and areas of study. As this chatbot was rolled out, the school’s administrators were surprised to discover that it was able to answer more than 38,708 questions, answering correctly more than 91% of the time.”</h4> 
-<h4>(How AI and Data Could Personalize Higher Education, 2019)</h4>
-<h4>&bull;  Intelligent tutoring: using real_time feedback to identify where AI detects  where a student is struggling and offers assistance to problem areas leading to better marks.</h4>
-<h4>&bull;  Adaptive assessments: AI quickly adapts to each student’s performance and presents valuable insights for teachers, allowing them to adjust teaching strategies in order to provide clearer understandings of topics.</h4>
-<h4>&bull;  Enhanced Content Creation: AI algorithms can generate educational content such as quizzes, practice exercises and lesson plans. This saves educators time and effort, allowing them to focus on more interactive and engaging teaching activities.</h4>
-<h4>&bull;  Accessibility and Inclusivity: AI can support learners with disabilities through the use of speech recognition, text-to-speech and image recognition. This reflects a commitment towards inclusivity and equality among all learners.</h4>
-<h4>&bull;  Administrative Support: AI systems can streamline administrative tasks, such as grading assignments, scheduling, and record-keeping, freeing up time for educators to focus on teaching and providing individualized support to students.</h4>
-<h4>&bull;  All of these opportunities contribute to providing an enhanced teaching and learning experience for society, but what are the downsides?</h4>
+<p>&bull;  Personalized learning paths: based on each student’s strengths/weaknesses/learning style, AI targets areas where students need support. 
+"Recently, The University of Murcia in Spain began testing an AI-enabled chatbot to answer students’ questions about the campus and areas of study. As this chatbot was rolled out, the school’s administrators were surprised to discover that it was able to answer more than 38,708 questions, answering correctly more than 91% of the time.” (How AI and Data Could Personalize Higher Education, 2019)</p>
+<p>&bull;  Intelligent tutoring: using real_time feedback to identify where AI detects  where a student is struggling and offers assistance to problem areas leading to better marks.</p>
+<p>&bull;  Adaptive assessments: AI quickly adapts to each student’s performance and presents valuable insights for teachers, allowing them to adjust teaching strategies in order to provide clearer understandings of topics.</p>
+<p>&bull;  Enhanced Content Creation: AI algorithms can generate educational content such as quizzes, practice exercises and lesson plans. This saves educators time and effort, allowing them to focus on more interactive and engaging teaching activities.</p>
+<p>&bull;  Accessibility and Inclusivity: AI can support learners with disabilities through the use of speech recognition, text-to-speech and image recognition. This reflects a commitment towards inclusivity and equality among all learners.</p>
+<p>&bull;  Administrative Support: AI systems can streamline administrative tasks, such as grading assignments, scheduling, and record-keeping, freeing up time for educators to focus on teaching and providing individualized support to students.</p>
+<p>&bull;  All of these opportunities contribute to providing an enhanced teaching and learning experience for society, but what are the downsides?</p>
 
 
 <!-- Sign and date the page, it's only polite! -->
