--- a/misc/opportunities.html
+++ b/misc/opportunities.html
@@ -24,7 +24,7 @@
 <h1>Technology Opportunities</h1>
 
 
-<h4><p>Artificial Intelligence (AI) has opened up many ways to enhance student education. Some of the opportunities include but are not limited to:</h4>
+<p>Artificial Intelligence (AI) has opened up many ways to enhance student education. Some of the opportunities include but are not limited to:</p>
 	
 <p>&bull;  Personalized learning paths: based on each student’s strengths/weaknesses/learning style, AI targets areas where students need support. 
 "Recently, The University of Murcia in Spain began testing an AI-enabled chatbot to answer students’ questions about the campus and areas of study. As this chatbot was rolled out, the school’s administrators were surprised to discover that it was able to answer more than 38,708 questions, answering correctly more than 91% of the time.” (How AI and Data Could Personalize Higher Education, 2019)</p>
