--- a/misc/opportunities.html
+++ b/misc/opportunities.html
@@ -28,7 +28,8 @@
 	
 <p>&bull;  Personalized learning paths: based on each student’s strengths/weaknesses/learning style, AI targets areas where students need support. 
 "Recently, The University of Murcia in Spain began testing an AI-enabled chatbot to answer students’ questions about the campus and areas of study. As this chatbot was rolled out, the school’s administrators were surprised to discover that it was able to answer more than 38,708 questions, answering correctly more than 91% of the time.” (How AI and Data Could Personalize Higher Education, 2019)</p>
-<p>&bull;  Intelligent tutoring: using real_time feedback to identify where AI detects  where a student is struggling and offers assistance to problem areas leading to better marks.</p>
+<p>&bull;  Intelligent tutoring: using real-time feedback to identify where AI detects  where a student is struggling and offers assistance to problem areas leading to better marks. The learning model is founded on the Myers-Briggs Type Indicator (MBTI) which evaluates the personalities of individuals including their qualities and preferences regarding how they learn and adjust feedback based on it.
+(Kumar, 2023)</p>
 <p>&bull;  Adaptive assessments: AI quickly adapts to each student’s performance and presents valuable insights for teachers, allowing them to adjust teaching strategies in order to provide clearer understandings of topics.</p>
 <p>&bull;  Enhanced Content Creation: AI algorithms can generate educational content such as quizzes, practice exercises and lesson plans. This saves educators time and effort, allowing them to focus on more interactive and engaging teaching activities.</p>
 <p>&bull;  Accessibility and Inclusivity: AI can support learners with disabilities through the use of speech recognition, text-to-speech and image recognition. This reflects a commitment towards inclusivity and equality among all learners.</p>
