--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
 
 <body>
-<img src="images/chatgpticon_40.png" alt="AI in Education">
+<img src="images/homepageicon.png" alt="AI in Education">
 <!-- Site navigation menu -->
 <ul class="navbar">
   <li><a href="index.html">Home page</a>
