--- a/misc/risks.html
+++ b/misc/risks.html
@@ -26,8 +26,8 @@
 
 <p>These days, as AI develops and is used a lot, many students are using AI chatbots like ChatGPT as an assistant to their work. This poses a lot of risks to education. The risks include:</p>
 <p>&bull;  Privacy Issues</p>
-<p>   Data privacy risks in AI implementation can impact the trust and acceptance of AI in education. Concerns about the misuse or unauthorized access of student and educator data can create hesitancy in adopting AI-powered educational technologies.</p>
-<p>   The potential for data breaches or mishandling of personally identifiable information (PII) can lead to legal and ethical implications. Education leaders must ensure that AI vendors explicitly commit to never selling or sharing PII data for marketing or commercial purposes.</p>
+<p>   Data privacy risks in AI implementation can impact the trust and acceptance of AI in education. Concerns about the misuse or unauthorized access of student and educator data can create hesitancy in adopting AI-powered educational technologies.
+	<br>The potential for data breaches or mishandling of personally identifiable information (PII) can lead to legal and ethical implications. Education leaders must ensure that AI vendors explicitly commit to never selling or sharing PII data for marketing or commercial purposes.</p>
 <p>&bull;  Overreliance on Technology</p>
 <p>   As a student, you have to develop, and learn more, but if you lean too much on AI, you will lack creativity and innovation.</p>
 <p>   Also student will lose the ability of problem-solving and thinking critically when faced with unexpected situations such as things that AI can’t do or not programmed to do.</p>
