--- a/misc/opportunities.html
+++ b/misc/opportunities.html
@@ -6,7 +6,7 @@
   </head>
 
 <body>
-<img src="../images/educationAI1.png" alt="AI Education"
+<img src="../images/educationAI1_35.png" alt="AI Education"
 <!-- Site navigation menu -->
 
 <ul class="navbar">
