--- a/misc/ethics.html
+++ b/misc/ethics.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>ethics</title>
-  	<link rel="stylesheet" href="../styles/minimal-table.css">
+  	<link rel="stylesheet" href="../styles/mystyles.css">
   </head>
 
 <body>
