--- a/misc/evaluation.html
+++ b/misc/evaluation.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Peer Evaluation Form</title>
-   	<link rel="stylesheet" href="../styles/minimal-table.css" type="text/css">
+   	<link rel="stylesheet" href="../styles/mystyles.css" type="text/css">
 </head>
 
 <body>
