--- a/misc/opportunities.html
+++ b/misc/opportunities.html
@@ -34,7 +34,7 @@
 <p>&bull;  Enhanced Content Creation: AI algorithms can generate educational content such as quizzes, practice exercises and lesson plans. This saves educators time and effort, allowing them to focus on more interactive and engaging teaching activities.</p>
 <p>&bull;  Accessibility and Inclusivity: AI can support learners with disabilities through the use of speech recognition, text-to-speech and image recognition. This reflects a commitment towards inclusivity and equality among all learners.</p>
 <p>&bull;  Administrative Support: AI systems can streamline administrative tasks, such as grading assignments, scheduling, and record-keeping, freeing up time for educators to focus on teaching and providing individualized support to students.</p>
-<p>&bull;  All of these opportunities contribute to providing an enhanced teaching and learning experience for society, but what are the downsides?</p>
+<p>All of these benefits contribute to providing an enhanced teaching and learning experience for society, but what are the downsides?</p>
 
 
 <!-- Sign and date the page, it's only polite! -->
