--- a/misc/choices.html
+++ b/misc/choices.html
@@ -6,7 +6,7 @@
   </head>
 
 <body>
-<img src="../images/csg4ed-small.png" alt="Enhancing Social Good in Computing"
+<img src="../images/choiceicon_50.png" alt="choices AI"
 <!-- Site navigation menu -->
 
 <ul class="navbar">
